# Cauldron

./: .gitignore  .npmignore  CAULDRON.md  MANIFEST.in  README.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: build-runners-and-release.yml
cauldron/: __init__.py  accounts.py  chunk.py  cli.py  constants.py  convert.py  guest.py  helpers.py  input.py  manifest.py  pack.py  postinstall.py  schema.py  upload.py  util.py  validate.py
cauldron/docs/: FROSTBITE_GUEST_CONTRACT.md  FROSTBITE_MODEL_SPEC.md  FROSTBITE_PDA_ACCOUNT_MODEL_V3.md  RUNNING_EXAMPLES.md
cauldron/rust_tools/: Cargo.toml
cauldron/toolchain/: CLIENT_GUIDE.md  GETTING_STARTED.md  README.md  SYSCALLS.md
cauldron/toolchain/examples/rust/: Cargo.toml  README.md
cauldron/toolchain/examples/rust/.cargo/: config.toml
cauldron/toolchain/examples/rust/src/: main.rs
cauldron/training/: README.md  __init__.py  cli.py
cauldron/tui/: __init__.py  agent_context.py  app.py  commands.py  registry.py  runtime.py  state.py  theme.tcss
docs/: FROSTBITE_PDA_ACCOUNT_MODEL_V3.md  RUNNING_EXAMPLES.md
docs/validation/: devnet-cu-metrics-2026-02-10.csv  devnet-semantic-2026-02-07-notes.txt  devnet-semantic-2026-02-07.csv
examples/models/: README.md  cnn1d-signal-score.frostbite-model.toml  (+9 more)
gatekeeper/: Cargo.toml  README.md
gatekeeper/src/: lib.rs
scripts/: build-runner-binaries.sh  cauldron-devnet-fastpath.sh  cauldron-seeded-cleanup.sh  install-global.sh  select-runner.js  select-runner.py  uninstall-global.sh
sdk/: README.md
tests/: test_accounts_paths.py  test_cli_pda_hardening.py
(+123 files in other folders)
