[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frostbite-modelkit"
version = "0.2.0"
description = "Model packaging and validation tools for Frostbite"
requires-python = ">=3.10"
dependencies = ["tomli>=2.0.1; python_version < '3.11'"]

[project.optional-dependencies]
train = [
  "numpy>=1.24,<2",
  "torch>=2.2",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.scripts]
frostbite-modelkit = "cauldron.cli:main"
cauldron = "cauldron.cli:main"
cauldron-postinstall = "cauldron.postinstall:main"

[tool.setuptools]
packages = ["cauldron", "cauldron.training"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
cauldron = [
  "bin/**",
  "docs/**",
  "examples/**",
  "templates/**",
  "templates/**/.cargo/**",
  "toolchain/**",
  "rust_tools/**",
]
